# myRPC

example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc  服务端.md
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc  客户端.md
lib/include/: mprpcconfig.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/myProto3/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
test/protobuf/: a.out  main.cc  test.proto
